--- a/style-musique.css
+++ b/style-musique.css
@@ -22,14 +22,21 @@ justify-content: space-around;
 align-items: center;
 }
 .image{
-    width:300px;
-    height:450px;
+    width:500px;
+    height:500px;
+display:flex;
+justify-content: center;
+align-items: center;
+}
+.img{
     border-radius: 10px;
     border: 2px solid #01161e;
     overflow: hidden;
+    width:300px;
+    height:450px;
 }
 .video{
-    width:600px;
+    width:500px;
     height:300px;
 border-radius: 5px;
 overflow: hidden;
@@ -40,9 +47,16 @@ overflow: hidden;
     font-size: 1.5rem;
  }
 .paroles{
-   height: 550px;
-    font-family: var(--poppins);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    width: 500px;
+   height: 500px;
+    font-family: var(--poppins);
+ 
+
     font-size: 0.7rem;
     color: #124559;
     overflow: auto;
