--- a/style-musique.css
+++ b/style-musique.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    --advent: 'Advent Pro', sans-serif;
+    --advent: 'Fredoka One', cursive;
     --poppins: 'Poppins', sans-serif;
     scrollbar-width: none;
 }
@@ -15,6 +15,7 @@ h1 {
     text-align: center;
 
     margin:30px;
+    color: #124559;
 }
 .corps {
 display: flex;
@@ -56,7 +57,7 @@ overflow: hidden;
    height: 500px;
     font-family: var(--poppins);
  
-
+padding: 5px;
     font-size: 0.7rem;
     color: #124559;
     overflow: auto;
