--- a/style.css
+++ b/style.css
@@ -1,20 +1,51 @@
-:root {
-    --advent: 'Advent Pro', sans-serif;
+* {
+    --advent:  'Fredoka One', cursive;
     --poppins: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    
 }
 
+:root::-webkit-scrollbar{
+    width:1.2rem;
+}
+:root::-webkit-scrollbar-track{
+background: #598392;
+}
+:root::-webkit-scrollbar-thumb{
+    background: #124559;
+    border-radius: 10px;
+}
 body {
     background: #eff6e0;
-}
+    margin: 0px;
+    padding: 0px;
 
+}
+.header{
+    display: flex;
+    background: #124559;
+    margin:0;
+    height: 200px;
+    box-shadow: 0px 2px 10px 2px #000000;
+}
+.title{
+    display: flex;
+    border-radius: 10px;
+    background: #124559;
+    box-shadow:  6px 6px 12px #0f3b4c,-6px -6px 12px #154f66;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    width: 70%;
+    margin: 60px auto;
+}
 h1 {
+    text-align: center;
     font-family: var(--advent);
     text-transform: uppercase;
-    text-align: center;
-    color: #01161e;
-    margin-top: 100px;
+    color: #EFF6E0;
+    text-shadow: 2px 2px 2px #01161e;
 }
 
 
@@ -25,7 +56,7 @@ h1 {
     justify-content: space-around;
     align-items: center;
     padding: 0;
-    margin-top: 100px;
+    margin-top: 40px;
 }
 
 .card  {
