--- a/style.css
+++ b/style.css
@@ -143,7 +143,21 @@ align-items: flex-start;
     background-size: contain;
 }
 .bf7{
+    background: url(/assets/image/jacques-brel.jpg) no-repeat;
+    background-size: cover;
+}
+.bf8{
     background: url(/assets/image/cheb-mami.jpg) no-repeat;
+    background-size: cover;
+}
+    .bf9{
+    background: url(/assets/image/michael-jackson.jpg) no-repeat;
+    background-size: cover;
+
+}
+
+    .bf10{
+    background: url(/assets/image/clavier.jpg) no-repeat;
     background-size: cover;
 
 }
